css/style.css
body
{
  margin:0;
  padding:0;
  background-size: 100%;
  font-family:Arial,sans-serif;
  color:#333333;
  background-image: url("../images/background.jpg");
  background-color: #fefefe;
  background-repeat: no-repeat;  
}

#vis {
    min-height: 550px;
}

#blurb {
    height: 60px;
    border-top: 1px solid #e2e2e2;
    padding-top: 20px;
}

path {
    stroke: #999999;
    stroke-width: 0.9;
    fill: none;
}

path.current,path.highlight.current {
    stroke: black;
    stroke-width: 1.7;
}

path.selected{
    stroke: red !important;
    stroke-width: 2 !important;
}

.highlight {
    stroke-width: 1px;
}

line {
    stroke: black;
}

text {
    font-family: Helvetica,Arial,sans-serif;
    font-size: 11px;
}

.axis {
    stroke-width: 0.8;
    stroke: #000;
}

.xTicks,.yTicks {
    stroke-width: 0.6;
    stroke: #000;
}

#cite {
    font-size: 0.8em;
    text-align: right;
    margin-top: 10px;
    padding-bottom: 20px;
}

#cite a {
    background: #e2e2e2;
    text-decoration: none;
    color: #821122;
}

.yLabel{
    display: inline-block;
    position: relative;
    left: -100px;
}

.clickable{
    cursor: pointer;
}

#filters span
{
    border-bottom:1px solid #f7f7f7;
    padding:15px 5px;
    display: block;
}


.INS.highlight {
   stroke:#993366;
}

.NIS.highlight {
   stroke:#ff3333;
}

.MOS.highlight {
    stroke: #f80a5e;
}

.INCS.highlight {
    stroke: #ff9933;
}

.MIS.highlight {
    stroke: #84400d;
}

.OPS.highlight {
    stroke:#3399cc;
}

.NAS.highlight {
    stroke: #669933;
}

.materialSelect{
    width: 10em;
    float:right;
}


.wrapper
{
  width:960px;
  margin:0 auto;
  border:1px solid #ff6600;
  height:800px;
}

.page-header span
{
  margin:0 auto;
  display: block
}

.page-header h1
{
  margin:0;
  padding:0;
}

h1,h2,h3,h4
{
  font-family: "Open Sans", Arial,sans-serif;
}

#legend ul
{
  margin:0; 
  padding:0;
  list-style-type: none;
}
#legend ul li
{
  border-bottom:1px solid #f7f7f7;
  padding:15px 5px;
}

.circle 
{
  border-radius: 50%;
  width: 30px;
  height:30px;
  background-color:#000;
  float:left;
  color:#fff;
  text-align: center;
  clear:both;
  margin-right:5px;
  margin-bottom:5px;
  line-height: 30px;

}

.circle:hover, .circleSelected
{
  border-width:3px;
  line-height: 25px;
  border-style: double;
}
.INS-default
{
  background-color: #993366
}
.INS-default:hover, .INS
{
  border-color: #993366;
  color:#993366;
  background-color: #fff

}
.NIS-default
{
  background-color: #ff3333
}
.NIS-default:hover, .NIS
{
  border-color: #ff3333;
  color:#ff3333;
  background-color: #fff
}
.OPS-default
{
  background-color: #3399cc
}
.OPS-default:hover, .OPS
{
  border-color: #3399cc;
  color: #3399cc;
  background-color: #fff
}
.MOS-default
{
  background-color: #f80a5e
}
.MOS-default:hover, .MOS
{
  border-color: #f80a5e;
  color:#f80a5e;
  background-color: #fff
}
.INCS-default
{
  background-color: #ff9933
}
.INCS-default:hover,.INCS
{
  border-color: #ff9933;
  color: #ff9933;
  background-color: #fff
}
.NAS-default
{
  background-color:#669933
}
.NAS-default:hover,.NAS
{
  border-color:#669933;
  color:#669933;
  background-color: #fff
}
.MIS-default
{
  background-color:#84400d;
}
.MIS-default:hover, .MIS
{
  border-color:#84400d;
  color:#84400d;
  background-color:#fff;
}
.footer
{
  padding:10px;
  border-top:1px solid #ccc;
  text-align: right;
}
a 
{
  color:#105D6D;
}

/*ifeanyi's additions here */
.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
    shape-rendering: crispEdges;
}

.grid path {
    stroke-width: 0;
   
}

/*.axis path {
    fill: none;
    stroke: #bbb;
    shape-rendering: crispEdges;
} */

.axis text {
    fill: #555;
    font-size: 11.5px;
}

.axis line {	
    stroke: #e7e7e7;
    shape-rendering: crispEdges;  
} 

.axis {
    font-size: 12px;
}

.axis-label {
    margin-right: 5px;
    font-size: 11px;
}

div.tooltip {
    position: absolute;	
    text-align: center;	
    width: auto;	
    height: auto;		
    padding: 5px;	
    font: 10px sans-serif;	
    background: lightsteelblue;	
    border: 0px;					
    border-radius: 5px;
}

#colorCodedMap {
	display:block;
    margin-top:-70px !important;
	
}

#legend {
    padding: 1.5em 0 0 1.5em;
}

.substance-title
{
  float:left;
}

.logo
{
  float:left; 
  margin-right:10px;
}
.main-title
{
  float:left;
}
.title-blurb
{
  clear:both; 
  margin-left:55px;
}

